--- a/page.css
+++ b/page.css
@@ -2,7 +2,7 @@ html, body{
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	height: 100%;
+	max-height: 100%;
 }
 
 body{
@@ -49,3 +49,10 @@ body{
 
 #info{ color: #35b4e3; }
 #close{ color: red; }
+
+/* and (resolution: 163dpi) */
+
+@media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1.5){
+	body{ font-size: .7em; }
+	.card{ margin: 2em auto; }
+}
