minor cosmetic fixes

--- a/page.css
+++ b/page.css
@@ -8,7 +8,7 @@ html, body{
 body{
 	background-color: #e5e5e5;
 	color: #898989;
-	font-family: 'Helvetica', 'Helvetica Neue', sans-serif;
+	font-family: sans-serif;
 	font-size: 1em;
 	text-align: center;
 	
