--- a/page.css
+++ b/page.css
@@ -15,6 +15,8 @@ body{
 	width: 90%;
 	max-width: 1000px;
 	margin: 0 auto;
+	
+	padding: 0 0 .8em 0; /* bottom padding for the footer */
 }
 
 .hide{ display: none !important; }
@@ -63,6 +65,21 @@ body{
 	border: none;
 }
 #dateInput:focus{ border: none; outline: none; }
+
+#footer{
+	position: fixed;
+	display: block;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	padding: 5px 0;
+	
+	font-size: .7em;
+	background-color: #e5e5e5;
+	box-shadow: 0 0 10px 2px #e5e5e5;
+}
+
+#footer a { color: #35b4e3; }
 
 /* and (resolution: 163dpi) */
 @media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 1.5){
